# Mono

./: CMakeLists.txt  CampusRules.txt  boardManager.c  boardManager.h  hoarding.out  main.c  makefile  playerManager.c  playerManager.h  ruleManager.c  ruleManager.h  structs.h
Boards/: CampusBoard.csv  ContinentBoardNoSalary.csv
